force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/geopointe__GP_Device_Daily_Summary__c.object-meta.xml
<CustomObject>
    <label>Geopointe Device Daily Summary</label>
    <nameField>
        <label>Daily Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Device Daily Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>