force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date__c</fullName>
    <inlineHelpText>The date this summary is for.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>