force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Device__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Device__c</fullName>
    <label>Device</label>
    <referenceTo>geopointe__GP_Device__c</referenceTo>
    <relationshipLabel>Geopointe Device Daily Summaries</relationshipLabel>
    <relationshipName>Geopointe_Device_Daily_Summaries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>