force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__End_City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__End_City__c</fullName>
    <label>End City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>