force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Engine_On_Time_Min__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Engine_On_Time_Min__c</fullName>
    <inlineHelpText>The total amount of time the engine was on. Set to -1 if unknown.</inlineHelpText>
    <label>Engine On Time (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>