force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Final_Odometer_Mi__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Final_Odometer_Mi__c</fullName>
    <label>Final Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>