force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Fuel_Use_Gal__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Fuel_Use_Gal__c</fullName>
    <label>Fuel Use (gal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>