force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Idle_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Idle_Duration_Min__c</fullName>
    <label>Long Idle Duration (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>