force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Max_Speed_MPH__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Max_Speed_MPH__c</fullName>
    <label>Max Speed (mph)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>