force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Max_Speed_Overage_MPH__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Max_Speed_Overage_MPH__c</fullName>
    <inlineHelpText>The maximimum amount by which the device exceeded the speed limit</inlineHelpText>
    <label>Max Speed Limit Overage (mph)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>