force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Num_Event_HDACC__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Num_Event_HDACC__c</fullName>
    <label># Events - Hard Acceleration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>