force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Num_Harsh_Events__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Num_Harsh_Events__c</fullName>
    <formula>geopointe__Num_Event_HDACC__c + geopointe__Num_Event_HDDEC__c + geopointe__Num_Event_HDLFT__c + geopointe__Num_Event_HDRGT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Harsh Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>