force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Speeding_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Speeding_Duration_Min__c</fullName>
    <inlineHelpText>The total amount of time the device was traveling above the speed limit. Set to -1 if unknown.</inlineHelpText>
    <label>Speeding Duration (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>