force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Start_County__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Start_County__c</fullName>
    <label>Start County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>