force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Start_Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Start_Cross_Street__c</fullName>
    <label>Start Cross Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>