force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__Start_Datetime__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Start_Datetime__c</fullName>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>