force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/fields/geopointe__User__c.field-meta.xml
<CustomField>
    <fullName>geopointe__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Geopointe_Device_Daily_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>