force-app/main/default/objects/geopointe__GP_Device_Daily_Summary__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__User__c</columns>
    <columns>geopointe__Total_Mileage_Mi__c</columns>
    <columns>geopointe__Engine_On_Time_Min__c</columns>
    <columns>geopointe__Fuel_Economy_MPG__c</columns>
    <columns>geopointe__End_City__c</columns>
    <columns>geopointe__Num_Harsh_Events__c</columns>
    <columns>geopointe__Max_Speed_Overage_MPH__c</columns>
    <columns>geopointe__Speeding_Duration_Min__c</columns>
    <columns>geopointe__Idle_Duration_Min__c</columns>
    <columns>geopointe__Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>